welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday = true){return false}
                    ^sleepIn:3: error: reassignment to val
	if (vacation = true){return true}
                     ^sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if (vacation = true){return true}
        ^